# mathematics-for-computer-vision

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: code_quality.yml  concept_documentation.yml  exercise_extension.yml
strang-linear-algebra/: CMakeLists.txt  GaussianElimination.cpp  SystemDecomposition.cpp  chapter_01.cpp  chapter_02.cpp  chapter_03.cpp
strang-lingear-algebra/: CMakeLists.txt  chapter_01.cpp
